# rust-lambda-cdk

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
deploy/: stack.ts
deploy/lib/: lambda-stack.ts
