[package]
name = "rust-lambda-cdk"
version = "0.1.0"
authors = ["nakamura.shuta <nakamura.shuta@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[dependencies]
lambda = { package = "netlify_lambda", version = "0.2.0" }
tokio = "1.5.0"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"

[dev-dependencies]
pretty_assertions = "0.7.2"
